isotopes-and-atomic-mass: Relocated the legend and the periodic table on the canvas.
isotopes-and-atomic-mass: Made the lower portion of the periodic table look transparent, made the letters & boundaries darker.
isotopes-and-atomic-mass: Moved the stable/unstable label down a bit so it wouldn't overlap the heavier nuclei.
isotopes-and-atomic-mass: made the font size consistent for element name shown under the symbol.
# 2.00.03 (48196) Jan 24, 2011
1/24/11 Publishing for internal review
isotopes-and-atomic-mass: improved the look of the disabled part of the periodic table
isotopes-and-atomic-mass: Created 2nd tab, put a temporary sketch on the tab.
isotopes-and-atomic-mass: Made the non-interactive portion of the periodic table contain simple squares instead of disabled buttons.
isotopes-and-atomic-mass: Made the neutron bucket a bit larger and added more neutrons in an attempt to make it more noticeable.
isotopes-and-atomic-mass: added isotope name under the symbol node, and internationalized
isotopes-and-atomic-mass: Increased the font size for element names in the symbol node in isotopes sim
isotopes-and-atomic-mass: Hide the charge indicator node in the isotopes sim
centered the text in symbol nodes
improved layout and tolerance for displaying values in AbundanceIndicator
Internationalized AbundanceIndicator
Improved AbundanceIndicator to say that C14 has a "very small" amount instead of 0
Added white background for AbundanceIndicator
Added trace amount of Carbon-14 to the isotope table.
Added title for 2nd tab of Isotopes sim.
# 2.00.02 (47929) Jan 13, 2011
1/13/11 Deploying to dev to correct an issue with launching of Isotopes.
# 2.00.01 (47918) Jan 12, 2011
1/12/11 Publishing to dev for review of some UI components
Added the scale for Isotopes.
Converted the periodic table to use buttons.
Added animation developer control to Isotopes.
Changed the title for the first tab of Isotopes.